--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-size-matters": "^0.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^3.0.1",
