--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -181,6 +181,11 @@ android {
 
         }
     }
+
+    lintOptions {
+        disable 'InvalidPackage'
+        checkReleaseBuilds false
+    }
 }
 
 dependencies {
@@ -211,6 +216,8 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
