--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.64.1",
     "react-native-config": "^1.4.2",
     "react-native-device-info": "^8.1.3",
+    "react-native-floating-label-input": "^1.3.9",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-i18n": "^2.0.15",
     "react-native-iphone-x-helper": "^1.3.1",
