--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-config": "^1.4.2",
+    "react-native-confirmation-code-field": "^7.1.0",
     "react-native-device-info": "^8.1.3",
     "react-native-floating-label-input": "^1.3.9",
     "react-native-gesture-handler": "^1.10.3",
