--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-progress": "^4.1.2",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^2.1.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-size-matters": "^0.4.0",
