--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
