--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
+    "react-native-share": "^6.2.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
