--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@welldone-software/why-did-you-render": "^6.2.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-root-import": "^6.6.0",
     "eslint": "7.14.0",
