--- a/ios/eduhk_cfs/Info.plist
+++ b/ios/eduhk_cfs/Info.plist
@@ -76,5 +76,32 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>CFBundleURLTypes</key>
+  <array>
+      <dict>
+          <key>CFBundleTypeRole</key>
+          <string>Editor</string>
+          <key>CFBundleURLSchemes</key>
+          <array>
+              <string>com.sotatek.eduhk-cfs</string>
+          </array>
+      </dict>
+      <dict>
+          <key>CFBundleTypeRole</key>
+          <string>Editor</string>
+          <key>CFBundleURLSchemes</key>
+          <array>
+              <string>com.googleusercontent.apps.305307018718-2buqdcnqbn5jsi69moc52km00rip3mlo</string>
+          </array>
+      </dict>
+      <dict>
+          <key>CFBundleTypeRole</key>
+          <string>Editor</string>
+          <key>CFBundleURLSchemes</key>
+          <array>
+              <string>com.googleusercontent.apps.305307018718-2buqdcnqbn5jsi69moc52km00rip3mlo</string>
+          </array>
+      </dict>
+  </array>
 </dict>
 </plist>
