--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-share": "^6.2.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.1.1",
+    "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
     "react-redux": "^7.2.4",
