--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^6.0.1",
     "@react-navigation/bottom-tabs": "^5.11.10",
+    "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.5.1",
@@ -35,6 +36,7 @@
     "react-native-i18n": "^2.0.15",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-pager-view": "^5.2.1",
     "react-native-progress": "^4.1.2",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^2.1.0",
@@ -44,6 +46,7 @@
     "react-native-share": "^6.2.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.0.1",
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
