--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-floating-label-input": "^1.3.9",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-i18n": "^2.0.15",
+    "react-native-image-picker": "^4.0.4",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.2.1",
