--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/art": "^1.2.0",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^6.0.1",
     "@react-navigation/bottom-tabs": "^5.11.10",
@@ -30,6 +31,7 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-config": "^1.4.2",
     "react-native-confirmation-code-field": "^7.1.0",
+    "react-native-dash": "^0.0.11",
     "react-native-device-info": "^8.1.3",
     "react-native-floating-label-input": "^1.3.9",
     "react-native-gesture-handler": "^1.10.3",
@@ -37,6 +39,8 @@
     "react-native-image-picker": "^4.0.4",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-measureme": "^0.0.2",
+    "react-native-modal-datetime-picker": "^10.0.0",
     "react-native-pager-view": "^5.2.1",
     "react-native-progress": "^4.1.2",
     "react-native-progress-circle": "^2.1.0",
