--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.5.1",
+    "@sentry/react-native": "^2.6.0",
     "axios": "^0.21.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
