--- a/ios/eduhk_cfs/Info.plist
+++ b/ios/eduhk_cfs/Info.plist
@@ -107,5 +107,18 @@
           </array>
       </dict>
   </array>
+  <key>NSAppTransportSecurity</key>
+    <dict>
+      <key>NSAllowsArbitraryLoads</key>
+      <true/>
+      <key>NSExceptionDomains</key>
+      <dict>
+        <key>localhost</key>
+        <dict>
+          <key>NSExceptionAllowsInsecureHTTPLoads</key>
+          <true/>
+        </dict>
+      </dict>
+    </dict>
 </dict>
 </plist>
