--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
+    "react-native-webview": "^11.6.5",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
